After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595849 - Fix Y41B strides in videotestsrc and gstvideo
Fix Y41B strides in videotestsrc and gstvideo
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal normal
: 0.10.26
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-09-21 16:53 UTC by Benjamin Otte (Company)
Modified: 2009-10-07 08:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[videotestsrc] Fix Y41B (1.67 KB, patch)
2009-09-21 16:53 UTC, Benjamin Otte (Company)
accepted-commit_after_freeze Details | Review
[video] Fix Y41B (1.89 KB, patch)
2009-09-21 16:53 UTC, Benjamin Otte (Company)
accepted-commit_after_freeze Details | Review

Description Benjamin Otte (Company) 2009-09-21 16:53:42 UTC
Various code uses non-aligned-to-4-byte rowstrides for Y41B chroma planes.
These patches fix them.
Comment 1 Benjamin Otte (Company) 2009-09-21 16:53:45 UTC
Created attachment 143616 [details] [review]
[videotestsrc] Fix Y41B

Chroma components should be aligned on 4byte boundaries.
Comment 2 Benjamin Otte (Company) 2009-09-21 16:53:49 UTC
Created attachment 143617 [details] [review]
[video] Fix Y41B

Chroma components should be aligned on 4byte boundaries.
Comment 3 Benjamin Otte (Company) 2009-09-21 17:05:02 UTC
Not sure if this should go in. It's not a regression but touches libgstvideo.
Comment 4 Sebastian Dröge (slomo) 2009-09-22 06:19:52 UTC
The patches look good, please commit them after freeze (or convince Jan that they should go in now) :)
Comment 5 Jan Schmidt 2009-09-22 09:50:40 UTC
It's not a regression, so I think it should wait at this point in the release cycle
Comment 6 Benjamin Otte (Company) 2009-10-07 07:57:20 UTC
pushed to master.